--- a/Moluscos/personage.html
+++ b/Moluscos/personage.html
@@ -14,11 +14,11 @@
         <section>
             <div class="Persona">
             <a href="./paginaJogo.html"><div class="Nome"><img class="per1" src="./IMG/turbo1.png" alt="Personagem 1"><p>Turbo</p></div></a>
-            <div class="Nome"><img class="per1" src="./IMG/turbo2.png" alt="Personagem 2"><p>Descolador</p></div>
-            <div class="Nome"><img class="per1" src="./IMG/Turbo 3.png" alt="Personagem 3"><p>Chicote</p></div>
-            <div class="Nome"><img class="per1" src="./IMG/Turbo 4.png" alt="Personagem 4"><p>Derrape</p></div>
-            <div class="Nome"><img class="per1" src="./IMG/turbo5.png" alt="Personagem 5"><p>Sombra Branca</p></div>
-            <div class="Nome"><img class="per1" src="./IMG/turbo6.png" alt="Personagem 6"><p>Brasa</p></div>
+            <a href="./descolado.html"><div class="Nome"><img class="per1" src="./IMG/descolado.png" alt="Personagem 2"><p>Descolador</p></div></a>
+            <a href="./chicote.html"><div class="Nome"><img class="per1" src="./IMG/chicote.png" alt="Personagem 3"><p>Chicote</p></div></a>
+            <a href="./derrape.html"><div class="Nome"><img class="per1" src="./IMG/derrape.png" alt="Personagem 4"><p>Derrape</p></div></a>
+            <a href="./sombra.html"><div class="Nome"><img class="per1" src="./IMG/sombra.png" alt="Personagem 5"><p>Sombra Branca</p></div></a>
+            <a href="./brasa.html"><div class="Nome"><img class="per1" src="./IMG/brasa.png" alt="Personagem 6"><p>Brasa</p></div></a>
             </div>
         </section>
     </main>
