--- a/Moluscos/paginaJogo.html
+++ b/Moluscos/paginaJogo.html
@@ -48,8 +48,7 @@
 
                     <!-- Pista e caracol -->
                     <div class="track">
-                        <img src="./IMG/turbo.png" alt="Caracol" class="snail">
-                        <div class="finish-line"></div>
+                        <img src="./IMG/Turbo.webp" alt="Caracol" class="snail">
                     </div>
 
                     <!-- Pergunta e respostas -->
