--- a/Moluscos/paginaJogo.html
+++ b/Moluscos/paginaJogo.html
@@ -76,7 +76,7 @@
     </div>
 
     <!-- Rodapé -->
-    <footer></footer>
+    <footer style="height: 50px;"></footer>
 
     <!-- Script -->
     <script type="module" src="./JS/verificacao.js"></script>
