--- a/Moluscos/chicote.html
+++ b/Moluscos/chicote.html
@@ -39,7 +39,7 @@
         <!-- Conteúdo principal -->
         <div class="container">
             <div class="conteudo">
-                <h2>Quiz do Caracol</h2>
+                <h2>Quiz do Chicote</h2>
                 <main>
                     <!-- Quantidade de perguntas -->
                     <div class="qntd">
