--- a/Moluscos/Creditos.html
+++ b/Moluscos/Creditos.html
@@ -14,29 +14,27 @@
     <div class="galeria">
         <div class="Foto">
             <img src="IMG/Foto1.png" alt="Foto 1">
-            <div class="creditos">Integrante 1</div>
+            <div class="creditos">Vinicius B</div>
         </div>
         <div class="Foto">
             <img src="IMG/Foto2.png" alt="Foto 2">
-            <div class="creditos">Integrante 2</div>
+            <div class="creditos">Gabriel L</div>
         </div>
         <div class="Foto">
             <img src="IMG/Foto3.png" alt="Foto 3">
-            <div class="creditos">Integrante 3</div>
+            <div class="creditos">Vinicius S</div>
         </div>
         <div class="Foto">
             <img src="IMG/Foto4.png" alt="Foto 4">
-            <div class="creditos">Integrante 4</div>
+            <div class="creditos">Pablo D</div>
         </div>
     </div>
     <div class="texto">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Officiis adipisci voluptate, veniam dignissimos deserunt sunt assumenda natus! Totam eligendi eos, nihil
-            error aliquid ut, sequi natus aliquam assumenda dolores libero.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Quo sapiente cum tenetur blanditiis facilis pariatur asperiores esse alias quaerat eveniet rerum laboriosam
-            magnam, error minus, nemo odit ullam officia nobis?
+            Somos um grupo de estudantes que desenvolveu um site de jogos educativos sobre moluscos como parte de um
+            trabalho de Ciências, em parceria com o SENAI. Nosso objetivo foi criar uma forma divertida e interativa de
+            aprender mais sobre esses animais fascinantes, unindo conhecimento científico e tecnologia. Esperamos que
+            todos aproveitem a experiência e aprendam enquanto se divertem!
         </p>
     </div>
 </body>
