--- a/Moluscos/personage.html
+++ b/Moluscos/personage.html
@@ -9,7 +9,8 @@
 <body>
     <main>
         <header>
-            <h1>Escolha o seu personagem</h1>
+            <span class="sair"><a href="/Moluscos/index.html">ᐊ</a></span>
+            <center><h1>Escolha o seu personagem</h1></center>
         </header>
         <section>
             <div class="Persona">
