--- a/Moluscos/Creditos.html
+++ b/Moluscos/Creditos.html
@@ -13,19 +13,19 @@
     <h1>Foto Integrantes</h1>
     <div class="galeria">
         <div class="Foto">
-            <img src="IMG/Foto1.png" alt="Foto 1">
+            <img src="IMG/Foto1.jpg" alt="Foto 1">
             <div class="creditos">Vinicius B</div>
         </div>
         <div class="Foto">
-            <img src="IMG/Foto2.png" alt="Foto 2">
+            <img src="IMG/Foto2.jpg" alt="Foto 2">
             <div class="creditos">Gabriel L</div>
         </div>
         <div class="Foto">
-            <img src="IMG/Foto3.png" alt="Foto 3">
+            <img src="IMG/Foto3.jpg" alt="Foto 3">
             <div class="creditos">Vinicius S</div>
         </div>
         <div class="Foto">
-            <img src="IMG/Foto4.png" alt="Foto 4">
+            <img src="IMG/Foto4.jpg" alt="Foto 4">
             <div class="creditos">Pablo D</div>
         </div>
     </div>
