--- a/sombra.html
+++ b/sombra.html
@@ -43,7 +43,7 @@
                 <main>
                     <!-- Quantidade de perguntas -->
                     <div class="qntd">
-                        Pergunta <span id="indicePergunta">1</span> de <span id="totalPerguntas">4</span>
+                        Pergunta <span id="indicePergunta"></span> de <span id="totalPerguntas"></span>
                     </div>
 
                     <!-- Pista e caracol -->
@@ -54,19 +54,19 @@
 
                     <!-- Pergunta e respostas -->
                     <div class="content">
-                        <div class="question" id="pergunta">Qual é a capital da França?</div>
+                        <div class="question" id="pergunta"></div>
                         <div class="answers" id="cards-container">
-                            <button>Paris</button>
-                            <button>Londres</button>
-                            <button>Berlim</button>
-                            <button>Roma</button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
                         </div>
                     </div>
 
                     <!-- Mensagem de finalização -->
                     <div class="finish" id="finish">
-                        <span>Parabéns! Você completou o jogo!</span>
-                        <button onclick="reiniciarJogo()">Reiniciar</button>
+                        <span></span>
+                        <button onclick="reiniciarJogo()"></button>
                     </div>
                 </main>
             </div>
