--- a/descolado.html
+++ b/descolado.html
@@ -39,27 +39,27 @@
         <!-- Conteúdo principal -->
         <div class="container">
             <div class="conteudo">
-                <h2>Quiz do Chicote</h2>
+                <h2>Quiz do Descolado</h2>
                 <main>
                     <!-- Quantidade de perguntas -->
                     <div class="qntd">
-                        Pergunta <span id="indicePergunta">1</span> de <span id="totalPerguntas">4</span>
+                        Pergunta <span id="indicePergunta"></span> de <span id="totalPerguntas"></span>
                     </div>
 
                     <!-- Pista e caracol -->
                     <div class="track">
-                        <img src="./IMG/chicote.png" alt="Caracol" class="snail">
+                        <img src="./IMG/descolado.png" alt="Caracol" class="snail">
                         <div class="finish-line"></div>
                     </div>
 
                     <!-- Pergunta e respostas -->
                     <div class="content">
-                        <div class="question" id="pergunta">Qual é a capital da França?</div>
+                        <div class="question" id="pergunta"></div>
                         <div class="answers" id="cards-container">
-                            <button>Paris</button>
-                            <button>Londres</button>
-                            <button>Berlim</button>
-                            <button>Roma</button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
                         </div>
                     </div>
 
